test/langtools/tools/javac/valhalla/minimalvalues/CheckIdentityHash01.out
- compiler.warn.incubating.modules: jdk.incubator.mvt
- compiler.err.warnings.and.werror
CheckIdentityHash01.java:13:25: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:14:25: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:17:32: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:18:32: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:20:32: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:21:32: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:23:42: compiler.warn.value.does.not.support: identityHashCode
CheckIdentityHash01.java:24:42: compiler.warn.value.does.not.support: identityHashCode
1 error
9 warnings
